# ansi

./: .clang-format  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md  ansi.h++  justfile  meson.build  meson_options.txt  project.yml
.github/workflows/: ci.yml
docs/: Makefile  requirements.txt
docs/source/: advanced.md  colors.md  conf.py  hyperlinks.md  index.rst  installation.md  overview.md  quick_start.md  requirements.md  styles.md  terminal.md
include/: ansi.h++  terminal.h++
include/inline/: ansi.inl  color256.inl  literals.inl  operators.inl  rgb.inl
src/: ansi.c++  terminal.c++
src/ansi/: str.c++  stylish.c++
src/ansi/color/: black.c++  blue.c++  color256.c++  cyan.c++  green.c++  hex.c++  magenta.c++  red.c++  rgb.c++  white.c++  yellow.c++
test/ceedling/: test_ansi.c++  test_terminal.c++
